--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mysql2": "^3.9.6",
+    "pg": "^8.11.5",
+    "pg-promise": "^11.6.0",
     "zod": "^3.22.5"
   },
   "devDependencies": {
